14 - Getting Started with Ansible Roles

--- a/playbooks/1-webapps.yaml
+++ b/playbooks/1-webapps.yaml
@@ -4,6 +4,8 @@
     iac_python_web_app_example: https://github.com/codingforentrepreneurs/iac-python
   vars_files:
     - "{{ inventory_dir }}/vars/webapps.yaml"
+  roles:
+    - nginx-uninstall
   tasks:
     - name: Clone Repo
       git:
