--- a/playbooks/2-load_balancer.yaml
+++ b/playbooks/2-load_balancer.yaml
@@ -1,15 +1,17 @@
 # ansible playbook
-- name: Install Nginx Play
+- name: Load Balancer Play
   hosts: load_balancer
   become: true
   vars:
-    my_name: JUSTIN 
+    my_name: JUSTIN
+  roles:
+    - nginx-install
   tasks:
-    - name: Install Nginx Task
-      apt:
-        name: nginx
-        update_cache: true
-        state: present
+    # - name: Install Nginx Task
+    #   apt:
+    #     name: nginx
+    #     update_cache: true
+    #     state: present
     - name: Create HTML File
       template:
         dest: /var/www/html/index.html
