--- a/playbooks/1-webapps.yaml
+++ b/playbooks/1-webapps.yaml
@@ -2,13 +2,18 @@
   hosts: webapps
   vars:
     iac_python_web_app_example: https://github.com/codingforentrepreneurs/iac-python
+    my_name: "Ansible"
   vars_files:
     - "{{ inventory_dir }}/vars/webapps.yaml"
   roles:
-    - nginx-uninstall
+    - nginx-install
   tasks:
     - name: Clone Repo
       git:
         repo: "{{ iac_python_web_app_example }}"
         dest: /var/www/webapp/
         update: yes
+    - name: Create HTML File
+      template:
+        dest: /var/www/html/index.html
+        src: "{{ inventory_dir }}/basics/hello-world-vars.html.jinja"
