18 - Docker Install Role

--- a/playbooks/1-webapps.yaml
+++ b/playbooks/1-webapps.yaml
@@ -6,7 +6,8 @@
   vars_files:
     - "{{ inventory_dir }}/vars/webapps.yaml"
   roles:
-    - nginx-install
+    - nginx-uninstall
+    - docker-install
   tasks:
     - name: Clone Repo
       git:
