--- a/playbooks/1-webapps.yaml
+++ b/playbooks/1-webapps.yaml
@@ -6,7 +6,6 @@
   vars_files:
     - "{{ inventory_dir }}/vars/webapps.yaml"
   roles:
-    - nginx-uninstall
     - docker-install
   tasks:
     - name: Clone Repo
@@ -14,7 +13,13 @@
         repo: "{{ iac_python_web_app_example }}"
         dest: /var/www/webapp/
         update: yes
-    - name: Create HTML File
-      template:
-        dest: /var/www/html/index.html
-        src: "{{ inventory_dir }}/basics/hello-world-vars.html.jinja"
+    - name: Docker Run Compose
+      shell:
+        cmd: docker compose -f compose.prod.yaml up -d
+        chdir: /var/www/webapp/
+        executable: /bin/bash
+    # - name: Docker Stop Compose
+    #   shell:
+    #     cmd: docker compose -f compose.prod.yaml down --rmi all --remove-orphans
+    #     chdir: /var/www/webapp/
+    #     executable: /bin/bash
